<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<EditText android:id="@+id/enter_number_text" android:layout_width="250px"
		android:layout_height="55px" android:textSize="18sp"
		android:layout_x="15px" android:layout_y="10px"
		android:enabled="false">
	</EditText>
	<Button android:id="@+id/enter_number_button_4" android:layout_width="65px"
		android:layout_height="55px" android:text="4"
		android:layout_x="10px" android:layout_y="120px">
	</Button>
	<Button android:id="@+id/enter_number_button_5" android:layout_width="65px"
		android:layout_height="55px" android:text="5"
		android:layout_x="75px" android:layout_y="120px">
	</Button>
	<Button android:id="@+id/enter_number_button_6" android:layout_width="65px"
		android:layout_height="55px" android:text="6"
		android:layout_x="140px" android:layout_y="120px">
	</Button>
	<Button android:id="@+id/enter_number_button_1" android:layout_width="65px"
		android:layout_height="55px" android:text="1"
		android:layout_x="10px" android:layout_y="175px">
	</Button>
	<Button android:id="@+id/enter_number_button_2" android:layout_width="65px"
		android:layout_height="55px" android:text="2"
		android:layout_x="75px" android:layout_y="175px">
	</Button>
	<Button android:id="@+id/enter_number_button_3" android:layout_width="65px"
		android:layout_height="55px" android:text="3"
		android:layout_x="140px" android:layout_y="175px">
	</Button>
	<Button android:id="@+id/enter_number_button_7" android:layout_width="65px"
		android:layout_height="55px" android:text="7"
		android:layout_x="10px" android:layout_y="65px">
	</Button>
	<Button android:id="@+id/enter_number_button_8" android:layout_width="65px"
		android:layout_height="55px" android:text="8"
		android:layout_x="75px" android:layout_y="65px">
	</Button>
	<Button android:id="@+id/enter_number_button_9" android:layout_width="65px"
		android:layout_height="55px" android:text="9"
		android:layout_x="140px" android:layout_y="65px">
	</Button>
	<Button android:id="@+id/enter_number_button_0" android:layout_width="65px"
		android:layout_height="55px" android:text="0"
		android:layout_x="75px" android:layout_y="230px">
	</Button>
	<Button android:id="@+id/enter_number_button_10" android:layout_width="65px"
		android:layout_height="55px" android:text="."
		android:layout_x="10px" android:layout_y="230px">
	</Button>
	<Button android:id="@+id/enter_number_button_11" android:layout_width="65px"
		android:layout_height="55px" android:text="@string/titleClear"
		android:layout_x="140px" android:layout_y="230px">
	</Button>
	<Button android:id="@+id/enter_number_button_12" android:layout_width="65px"
		android:layout_height="55px" android:text="@string/titlePrev"
		android:layout_x="205px" android:layout_y="120px">
	</Button>
	<Button android:id="@+id/enter_number_button_13" android:layout_width="65px"
		android:layout_height="55px" android:text="@string/titleNext"
		android:layout_x="205px" android:layout_y="175px">
	</Button>
	<Button android:id="@+id/enter_number_button_14" android:layout_width="65px"
		android:layout_height="55px" android:text="@string/titleMore"
		android:layout_x="205px" android:layout_y="65px">
	</Button>
	<Button android:id="@+id/enter_number_button_15" android:layout_width="65px"
		android:layout_height="55px" android:text="@string/titleSave"
		android:layout_x="205px" android:layout_y="230px">
	</Button>
</AbsoluteLayout>
